--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./src/index.scss",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack serve",
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
@@ -17,6 +18,7 @@
     "@webpack-cli/generators": "^3.0.7",
     "autoprefixer": "^10.4.14",
     "css-loader": "^6.8.1",
+    "html-bundler-webpack-plugin": "^2.6.1",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.27",
@@ -26,6 +28,8 @@
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-middleware": "^6.1.1",
+    "webpack-dev-server": "^4.15.1"
   }
 }
