--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "snippet"]
 	path = snippets
 	url = git@github.com:mariomui/obsidian-snippets.git
+[submodule "obs-snippets"]
+	path = obs-snippets
+	url = git@github.com:mariomui/obsidian-snippets
