--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.4.14",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^7.0.0",
     "dotenv": "^16.3.1",
     "html-bundler-webpack-plugin": "^2.6.1",
     "html-webpack-plugin": "^5.5.3",
