Install lightning css and browserlist

--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "devDependencies": {
     "@webpack-cli/generators": "^3.0.7",
     "autoprefixer": "^10.4.14",
+    "browserslist": "^4.24.4",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "dotenv": "^16.3.1",
     "html-bundler-webpack-plugin": "^2.6.1",
     "html-webpack-plugin": "^5.5.3",
+    "lightningcss": "^1.29.1",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.27",
     "postcss-loader": "^7.3.3",
