set up scaffold for postprocessing plugin via postcss

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,13 +1,16 @@
 {
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@shared/*": [
-        "src/shared/*"
-      ],
-    }
-  },
-  "exclude": [
-    "node_modules"
-  ]
+	"compilerOptions": {
+		"baseUrl": ".",
+		"paths": {
+			"@shared/*": [
+				"src/shared/*"
+			],
+			"@psp/*": [
+				"postcss/index.js"
+			]
+		}
+	},
+	"exclude": [
+		"node_modules"
+	]
 }
